--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 header {
-  background-image: url("wallpaper/2.png");
+  background-image: url("2.png");
   height: 100vh;
   background-size: cover;
   display: flex;
