--- a/main.css
+++ b/main.css
@@ -1,3 +1,38 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
+#button_area{
+  display: none;
+  max-height: 200px;
+  background-color: black;
+}
+
+#inside_button{
+  margin: 0 auto;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+#button{
+  color: white;
+  margin: 20px auto;
+  width: 180px;
+  border: 3px solid white;
+  background-color: black;
+  padding: 10px 40px;
+}
+
+#button:hover {
+  color:black;
+  background-color: white;
+}
+
+
+
+
 header {
   background-image: url("2.png");
   height: 100vh;
@@ -38,9 +73,4 @@ p{
   margin: 0px auto;
   max-width: 600px;
 
-}
-
-*{
-  margin: 0;
-  padding: 0;
 }
