--- a/main.css
+++ b/main.css
@@ -5,6 +5,40 @@
 body {
   background-color: black;
 }
+.middle{
+  margin: 10px auto;
+  width: 50%;
+}
+ul {
+  list-style: none;
+  height: 3rem;
+  display: flex;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
+  border-radius: 4px;
+}
+li {
+  border-radius: 4px;
+  padding: 1rem 2rem;
+  margin: auto auto;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+li:hover {
+
+  background-color: #eae7e733;
+}
+.line:hover{
+
+  background-color: black;
+}
+.line {
+  padding: 0;
+  min-width: 1px;
+
+color: white;
+
+}
 
 #button_area{
   display: none;
@@ -99,7 +133,8 @@ body {
 #hook {
   background-color: transparent;
   padding: 10px;
-  border: 4px solid white;
+  border-top: 3px solid white;
+  border-bottom: 3px solid white;
   border-radius: 1px;
 }
 a {
