--- a/main.css
+++ b/main.css
@@ -28,10 +28,10 @@ body {
   display: inline-flex;
   overflow: auto;
 }
-@media only screen and (min-width: 700px) {
+@media only screen and (max-width: 700px) {
   #port {
     max-height: 250px;
-    max-width: 100%;
+    max-width: 98vh;
   }
 }
 .close {
