--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ body {
 @media only screen and (max-width: 700px) {
   #port {
     max-height: 250px;
-    max-width: 98vh;
+    max-width: 98vw;
   }
 }
 .close {
