--- a/main.css
+++ b/main.css
@@ -5,12 +5,6 @@
 body {
   background-color: black;
 }
-#title{
-  display:none;
-  z-index: 0;
-  justify-content: center;
-
-}
 #hook {
   visibility: visible;
   background-color: transparent;
@@ -31,7 +25,7 @@ body {
 @media only screen and (max-width: 700px) {
   #port {
     max-height: 250px;
-    max-width: 98vw;
+    max-width: auto;
   }
   #hook {
     max-width: 100%;
@@ -80,7 +74,7 @@ body {
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
 img {
-  padding: 10px;
+  padding: 1px;
   cursor: pointer;
   transition: 0.3s;
 }
