--- a/main.css
+++ b/main.css
@@ -8,7 +8,8 @@ body {
 #hook {
   visibility: visible;
   background-color: transparent;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-top: 3px solid white;
   border-bottom: 3px solid white;
   border-radius: 1px;
