--- a/main.css
+++ b/main.css
@@ -109,8 +109,13 @@ ul {
     max-height: auto;
     max-width: auto;
   }
-  
-
+  #hook {
+    max-width: 99%;
+  }
+  img {
+    width: 200px;
+    height: auto;
+  }
 }
 
 li {
