--- a/main.css
+++ b/main.css
@@ -181,7 +181,7 @@ color: white;
 
 
 #header1 {
-  background-image: url("assets/background/3.jpg");
+  background-image: url("assets/background/22.png");
   height: 90vh;
   background-size: cover;
   display: flex;
