--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
 }
 
 #port {
-  max-height: 250px;
+  /*max-height: 250px;*/
   max-width: 880px;
   display: inline-flex;
   overflow: auto;
@@ -115,8 +115,8 @@ ul {
     max-width: 99%;
   }
   img {
-    width: 200px;
-    height: auto;
+    /*width: 200px;
+    height: auto;*/
   }
 }
 
