--- a/main.css
+++ b/main.css
@@ -183,7 +183,7 @@ color: white;
 
 
 #header1 {
-  background-image: url("assets/background/22.png");
+  background-image: url("assets/background/Background-Images-70F.png");
   height: 90vh;
   background-size: cover;
   display: flex;
